fix: horizontal scroll issue

--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,11 @@
 
 body {
 	margin: 0;
-	display: flex;
-	place-items: center;
-	min-width: 320px;
+	padding: 0;
+	box-sizing: border-box;
+	/* display: flex; */
+	/* flex-direction: column; */
+	/* min-width: 320px; */
 	min-height: 100vh;
 }
 
