--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -5,7 +5,7 @@
 	mask-repeat: no-repeat;
 	mask-size: 40px;
 	height: 100vh;
-	width: 100vw;
+	/* width: 100vw; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
